add gitignore file

--- a/01_LedBlink/Debug/makefile
+++ b/01_LedBlink/Debug/makefile
@@ -32,13 +32,19 @@ default.size.stdout \
 OBJDUMP_LIST += \
 01_LedBlink.list \
 
+OBJCOPY_HEX += \
+01_LedBlink.hex \
+
+OBJCOPY_BIN += \
+01_LedBlink.bin \
+
 
 # All Target
 all: 01_LedBlink.elf secondary-outputs
 
 # Tool invocations
-01_LedBlink.elf: $(OBJS) $(USER_OBJS) F:\File\STM32\stm32_exercise\Cube_IDE_Workspace\F429_Workspace\01_LedBlink\STM32F429IGTX_FLASH.ld
-	arm-none-eabi-gcc -o "01_LedBlink.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"F:\File\STM32\stm32_exercise\Cube_IDE_Workspace\F429_Workspace\01_LedBlink\STM32F429IGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="01_LedBlink.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+01_LedBlink.elf: $(OBJS) $(USER_OBJS) F:\File\STM32\stm32_exercise\Cube_IDE_Workspace\F429_Workspace\Stm32F429IGT6_Learning\01_LedBlink\STM32F429IGTX_FLASH.ld
+	arm-none-eabi-gcc -o "01_LedBlink.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"F:\File\STM32\stm32_exercise\Cube_IDE_Workspace\F429_Workspace\Stm32F429IGT6_Learning\01_LedBlink\STM32F429IGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="01_LedBlink.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -52,12 +58,22 @@ default.size.stdout: $(EXECUTABLES)
 	@echo 'Finished building: $@'
 	@echo ' '
 
+01_LedBlink.hex: $(EXECUTABLES)
+	arm-none-eabi-objcopy  -O ihex $(EXECUTABLES) "01_LedBlink.hex"
+	@echo 'Finished building: $@'
+	@echo ' '
+
+01_LedBlink.bin: $(EXECUTABLES)
+	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "01_LedBlink.bin"
+	@echo 'Finished building: $@'
+	@echo ' '
+
 # Other Targets
 clean:
 	-$(RM) *
 	-@echo ' '
 
-secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
+secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_HEX) $(OBJCOPY_BIN)
 
 .PHONY: all clean dependents
 .SECONDARY:
